Jenkins/kubernetes-manifests-backup/manifests/manifests-clean.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2026-07-02T08:09:18Z"
  labels:
    app.kubernetes.io/managed-by: Helm
    endpoints.kubernetes.io/managed-by: endpoint-controller
  name: dozzle-service
  namespace: monitoring
subsets:
- addresses:
  - ip: 10.42.1.9
    nodeName: k3s-worker-01    тщвуТфьуЖ л3ы-цщклук-01

    targetRef:
      kind: Pod
      name: dozzle-6f6b78b7bd-c2b75
      namespace: monitoring
      uid: c51aa6e9-5a1e-4084-b2f3-9599dd7042b0
  ports:
  - port: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: dozzle
    meta.helm.sh/release-namespace: monitoring
    metallb.universe.tf/address-pool: default-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.3.202
  labels:
    app.kubernetes.io/managed-by: Helm
  name: dozzle-service
  namespace: monitoring
spec:
  clusterIP: 10.43.196.165
  clusterIPs:
  - 10.43.196.165
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30080
    port: 80
    targetPort: 8080
  selector:
    app: dozzle
  type: LoadBalancer
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "1"
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/7xUTW/jNhD9K8WcJVmK7XwI6CFIgiJo1zFsby8LIxhRI5s1RRLkSBtvoP9eUHayCurdNJeFD4bImTecN+/NM6CVf5Pz0mjIAa31ozaDCHZSl5DDLVJt9JIYIqiJsURGyJ8BtTaMLI324dMU/5BgT5w4aRKBzIoSaUYyYED0w3vzVZOLN+0Ochi1WfTbn1KXvy/JtVLQu3kaa4IcSvPtm6LYfyDLWxQhtTZasnFSb6CLQGFB6qf9bNFvIQea0pW4yNIzkeL55CIbn02yyfRsUomL6aScjq+qIsVqjBCBb4Uwmp1RilyyG/sBmjYleVIk2DjIoULl6Z0U34ofdf0/0k63fQT0rVBF/BY2LscCq8nlGA5hLwC7pqDY7z1THRC8JRFo+97MM9TIYvvXK6No7bs1ui4CptoqZOohBoJTH0L61SQOOMCGTW0azUcVXwsRvlZ [...]
    objectset.rio.cattle.io/id: ""
    objectset.rio.cattle.io/owner-gvk: /v1, Kind=Service
    objectset.rio.cattle.io/owner-name: dozzle-service
    objectset.rio.cattle.io/owner-namespace: monitoring
  labels:
    objectset.rio.cattle.io/hash: e5e9c7102c0a647132414524fc754d539fb0af3a
    svccontroller.k3s.cattle.io/nodeselector: "false"
    svccontroller.k3s.cattle.io/svcname: dozzle-service
    svccontroller.k3s.cattle.io/svcnamespace: monitoring
  name: svclb-dozzle-service-d3caf483
  namespace: kube-system
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: svclb-dozzle-service-d3caf483
  template:
    metadata:
      labels:
        app: svclb-dozzle-service-d3caf483
        svccontroller.k3s.cattle.io/svcname: dozzle-service
        svccontroller.k3s.cattle.io/svcnamespace: monitoring
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: SRC_PORT
          value: "80"
        - name: SRC_RANGES
          value: 0.0.0.0/0
        - name: DEST_PROTO
          value: TCP
        - name: DEST_PORT
          value: "80"
        - name: DEST_IPS
          value: 10.43.196.165
        image: rancher/klipper-lb:v0.4.13
        imagePullPolicy: IfNotPresent
        name: lb-tcp-80
        ports:
        - containerPort: 80
          hostPort: 80
          name: lb-tcp-80
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      priorityClassName: system-node-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv4.ip_forward
          value: "1"
      serviceAccount: svclb
      serviceAccountName: svclb
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - key: CriticalAddonsOnly
        operator: Exists
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: dozzle
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: dozzle
  namespace: monitoring
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dozzle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dozzle
    spec:
      containers:
      - env:
        - name: DOZZLE_AUTH_PROVIDER
          value: simple
        - name: DOZZLE_MODE
          value: k8s
        image: amir20/dozzle:v10.4
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - /dozzle
            - healthcheck
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: dozzle
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/users.yml
          name: auth-config
          readOnly: true
          subPath: users.yml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: dozzle-pod-viewer-sa
      serviceAccountName: dozzle-pod-viewer-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: auth-config
        secret:
          defaultMode: 420
          secretName: dozzle-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: dozzle
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: Helm
  name: dozzle-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: dozzle.k8s.local
    http:
      paths:
      - backend:
          service:
            name: dozzle-service
            port:
              number: 80
        path: /
        pathType: Prefix
